Postcard slider fixed height on mobile

--- a/resources/frontend/sass/themes/_post-card.scss
+++ b/resources/frontend/sass/themes/_post-card.scss
@@ -108,11 +108,18 @@
       }
 
       &__max-height {
+        height: 269px;
+        position: relative;
         box-shadow: 0px 10px 10px -5px rgba(204, 204, 204, 0.6);
 
         #{$this}__title {
           font-size: 16px;
           line-height: 24px;
+        }
+
+        .post-meta {
+          position: absolute;
+          bottom: 2rem;
         }
       }
     
